--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start":"node server.js",
-    "prod":"nodemon server.js"
+    "prod":"nodemon server.js",
+    "dev":"nodemon server.js"
   },
   "keywords": [],
   "author": "",
