--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start":"node server.js",
     "prod":"nodemon server.js",
-    "dev":"nodemon server.js"
+    "dev":"nodemon server.js",
+    "seed":"node seeder.js"
   },
   "keywords": [],
   "author": "",
