--- a/Server/package.json
+++ b/Server/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start":"node server.js",
-    "prod":"nodemon server.js",
-    "dev":"nodemon server.js",
-    "seed":"node seeder.js"
+    "start": "node server.js",
+    "prod": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "seed": "node seeder.js"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +15,14 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "nodemon": "^3.1.10"
+    "multer": "^2.0.1",
+    "nodemon": "^3.1.10",
+    "streamifier": "^0.1.1"
   }
 }
